# argonone-rs

./: CHANGELOG.md  Cargo.toml  README.md  RELEASE_NOTES.md
.github/workflows/: ci.yml  pages.yml  release.yml
assets/: VENDORED.md
docs/: ROADMAP.md  research-auth-persistence-service.md  research-rust-backend-webui.md
docs/mockups/: 00-index.html  01-setup-wizard.html  02-login.html  03-dashboard.html  04-fan-curve-editor.html  05-storage-raid.html  06-oled-display.html  07-users-rbac.html  08-system-settings.html  09-audit-log.html  10-account.html  11-dashboard-reorder.html  12-logs.html  13-notifications.html
docs/releases/: README.md  v0.1.0.md  v0.2.0.md  v0.3.0.md  v0.4.0.md  v0.5.0.md  v0.6.0.md
migrations/: 0001_init.sql
packaging/systemd/: argonone-rs.service
scripts/: cut-release.sh  deploy-local.sh  deploy.sh
src/: admin.rs  cli.rs  https.rs  main.rs  rtc_schedule.rs  service.rs
src/auth/: mod.rs
src/config/: mod.rs
src/db/: audit.rs  mod.rs  settings.rs  users.rs
src/fan/: curve_store.rs  mod.rs
src/hardware/: board.rs  gpio.rs  i2c.rs  ir.rs  lockfile.rs  mod.rs  noop.rs  oled.rs  rtc.rs
src/oled/: framebuffer.rs  mod.rs  render.rs  splash.rs
src/sysinfo/: mod.rs
src/web/: audit.rs  dashboard.rs  fan_curve.rs  login.rs  mod.rs  oled.rs  rtc.rs  setup.rs  status.rs  storage.rs  system.rs  templates.rs  tests.rs  users.rs  ws.rs
templates/: app_shell.html  audit.html  base.html  change_password.html  dashboard.html  fan_curve.html  login.html  oled.html  setup.html  storage.html  system.html  users.html
