[package]
name = "argonone-rs"
version = "0.1.0"
edition = "2024"
authors = ["Arunkumar Mourougappane <amouroug.dev@gmail.com>"]
license = "MIT"
description = "A Rust daemon and CLI for Argon ONE/EON Raspberry Pi cases — I2C fan control, GPIO power-button handling, and system monitoring."
repository = "https://github.com/arunkumar-mourougappane/argonone-rs"
homepage = "https://github.com/arunkumar-mourougappane/argonone-rs"
readme = "README.md"
keywords = ["raspberry-pi", "argon-one", "gpio", "i2c", "daemon"]
categories = ["hardware-support", "command-line-utilities", "embedded"]
exclude = [
    "docs/",
    ".github/",
    "packaging/",
]

[[bin]]
name = "argonone-rs"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
embedded-graphics = "0.8.2"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
time = { version = "0.3.53", features = ["formatting", "macros"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "time", "signal", "sync"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[target.'cfg(target_os = "linux")'.dependencies]
display-interface-i2c = "0.5.0"
gpiod = "0.3.0"
i2cdev = "0.6.2"
linux-embedded-hal = { version = "0.4.1", default-features = false, features = ["i2c"] }
sd-notify = "0.5.0"
ssd1306 = "0.10.0"

[dev-dependencies]
tempfile = "3"
