[package]
name = "argonone-rs"
version = "0.5.0"
edition = "2024"
authors = ["Arunkumar Mourougappane <amouroug.dev@gmail.com>"]
license = "MIT"
description = "A Rust daemon, CLI, and web UI for Argon ONE/EON Raspberry Pi cases — I2C fan control, GPIO power-button handling, system monitoring, and a browser-based dashboard."
repository = "https://github.com/arunkumar-mourougappane/argonone-rs"
homepage = "https://github.com/arunkumar-mourougappane/argonone-rs"
readme = "README.md"
keywords = ["raspberry-pi", "argon-one", "gpio", "i2c", "daemon"]
categories = ["hardware-support", "command-line-utilities", "embedded", "web-programming::http-server"]
exclude = [
    "docs/",
    ".github/",
    "packaging/",
]

[[bin]]
name = "argonone-rs"
path = "src/main.rs"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.8.9", features = ["ws", "macros"] }
axum-login = "0.18.0"
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
clap = { version = "4.6.1", features = ["derive"] }
embedded-graphics = "0.8.2"
minijinja = { version = "2.21.0", features = ["json", "loader"] }
rand = "0.10.2"
rustls-acme = { version = "0.15.3", features = ["axum", "tokio", "tower"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "migrate", "macros", "chrono"] }
thiserror = "2.0.18"
time = { version = "0.3.53", features = ["formatting", "macros"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "time", "signal", "sync"] }
tokio-stream = "0.1.18"
tower-http = { version = "0.7.0", features = ["fs", "trace"] }
tower-sessions = "0.14"
tower-sessions-sqlx-store = { version = "0.15", features = ["sqlite"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
x509-parser = "0.16.0"
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
display-interface-i2c = "0.5.0"
gpiod = "0.3.0"
i2cdev = "0.6.2"
linux-embedded-hal = { version = "0.4.1", default-features = false, features = ["i2c"] }
sd-notify = "0.5.0"
ssd1306 = "0.10.0"

[dev-dependencies]
http-body-util = "0.1.4"
tempfile = "3"
tower = { version = "0.5.3", features = ["util"] }
